--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:e2e": "playwright test --reporter=list",
+    "test:e2e:headed": "playwright test --headed --project=chromium"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.54.0",
@@ -32,6 +34,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "@playwright/test": "^1.47.1"
   }
 }
