--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# Environment files
 .env
+.env.local
+.env.development
+.env.production
+!.env.example
 
 # Local Netlify folder
 .netlify
